...
            "state" : "translated",
            "value" : "好"
          }
        }
      }
    },
    "あとで" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Später"
          }
...
            "state" : "translated",
            "value" : "為了在 App 關閉時偵測您抵達目的地，需要將定位權限設為「永遠允許」。您可以稍後在設定中變更。"
          }
        }
      }
    },
    "アラーム" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alarm"
          }
...
            "state" : "translated",
            "value" : "啟用鬧鐘"
          }
        }
      }
    },
    "アラームを編集" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alarm bearbeiten"
          }
...
            "state" : "translated",
            "value" : "自訂抵達範圍"
          }
        }
      }
    },
    "キャンセル" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "例如：大阪站"
          }
        }
      }
    },
    "保存" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sichern"
          }
...
        }
      }
    },
    "到着通知の設定を確認" : {

    },
    "到着通知の設定を確認してください" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Überprüfen Sie die Einstellungen für Ankunftsbenachrichtigungen"
          }
...
            "state" : "translated",
            "value" : "請檢查抵達通知設定"
          }
        }
      }
    },
    "削除" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
          }
...
            "state" : "translated",
            "value" : "搜尋地點"
          }
        }
      }
    },
    "変更を破棄" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Änderungen verwerfen"
          }
...
            "state" : "translated",
            "value" : "捨棄變更"
          }
        }
      }
    },
    "変更を破棄しますか？" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Änderungen verwerfen?"
          }
...
            "state" : "translated",
            "value" : "可從搜尋結果列表中選擇目的地"
          }
        }
      }
    },
    "目的地を検索" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ziel suchen"
          }
...
            "state" : "translated",
            "value" : "設定目的地"
          }
        }
      }
    },
    "目的地を追加" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ziel hinzufügen"
          }
...
            "state" : "translated",
            "value" : "正在檢查…"
          }
        }
      }
    },
    "編集を続ける" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bearbeiten fortsetzen"
          }
...
